; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_test-device.c_is_rgb_color.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_test-device.c_is_rgb_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (float, float, float, float)* @is_rgb_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_rgb_color(float %0, float %1, float %2, float %3) #0 {
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  store float %0, float* %5, align 4
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %12 = load float, float* %6, align 4
  %13 = load float, float* %7, align 4
  %14 = fsub float %12, %13
  %15 = call float @fz_abs(float %14)
  store float %15, float* %9, align 4
  %16 = load float, float* %6, align 4
  %17 = load float, float* %8, align 4
  %18 = fsub float %16, %17
  %19 = call float @fz_abs(float %18)
  store float %19, float* %10, align 4
  %20 = load float, float* %7, align 4
  %21 = load float, float* %8, align 4
  %22 = fsub float %20, %21
  %23 = call float @fz_abs(float %22)
  store float %23, float* %11, align 4
  %24 = load float, float* %9, align 4
  %25 = load float, float* %5, align 4
  %26 = fcmp ogt float %24, %25
  br i1 %26, label %35, label %27

27:                                               ; preds = %4
  %28 = load float, float* %10, align 4
  %29 = load float, float* %5, align 4
  %30 = fcmp ogt float %28, %29
  br i1 %30, label %35, label %31

31:                                               ; preds = %27
  %32 = load float, float* %11, align 4
  %33 = load float, float* %5, align 4
  %34 = fcmp ogt float %32, %33
  br label %35

35:                                               ; preds = %31, %27, %4
  %36 = phi i1 [ true, %27 ], [ true, %4 ], [ %34, %31 ]
  %37 = zext i1 %36 to i32
  ret i32 %37
}

declare dso_local float @fz_abs(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
